<resources>
    <string name="app_name">Admin App</string>
    <string name="select_image">Select Image</string>
    <string name="select_pdf">Select Pdf File</string>
    <string name="upload_notice">Upload Notice</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload_pdf">Upload Pdf</string>
    <string name="add_faculty">Add Faculty</string>
    <string name="update_faculty">Update Faculty</string>
    <string name="delete_faculty">Delete Faculty</string>
    <string name="delete_notice">Delete Notice</string>
    <string name="dialog_delete_conformation">Are you sure u want to delete?</string>
    <string name="notice_deleted">Notice Deleted Successfully</string>
    <string name="error_required">"Required "</string>
    <string name="select_category">Select Category</string>
    <string name="convocation">Convocation</string>
    <string name="republic_day">Republic Day</string>
    <string name="no_pdf_selected">No Pdf Selected</string>
    <string name="cse">Computer Science</string>
    <string name="civil">Civil</string>
    <string name="mechanical">Mechanical</string>
    <string name="agriculture">Agriculture</string>
    <string name="ece">Electronics</string>
    <string name="no_data_found">No data found</string>
    <string name="update_info">Update Info</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="post">Post</string>
    <string name="please_select_pdf">Please Select a pdf</string>
    <string name="uploaded_successfully">Uploaded Successfully</string>
    <string name="failed_to_upload">Failed to upload</string>
    <string name="please_select_image">Please Select an image</string>
    <string name="please_select_image_category">Please Select Image Category</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="faculty_updated_successfully">Faculty Updated Successfully</string>
    <string name="teacher_deleted_successfully">Teacher Deleted Successfully</string>

    <string-array name="image_categories">
        <item>@string/select_category</item>
        <item>@string/convocation</item>
        <item>@string/republic_day</item>
    </string-array>

    <string-array name="departments">
        <item>@string/select_category</item>
        <item>@string/cse</item>
        <item>@string/mechanical</item>
        <item>@string/ece</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="signup">SignUp</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="logout">Logout</string>
</resources>