<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_15">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/layoutSelectPdf"
                    android:layout_width="@dimen/layout_width_130"
                    android:layout_height="@dimen/layout_height_150"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_10">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/layout_d_64"
                            android:layout_height="@dimen/layout_d_64"
                            android:background="@drawable/circle_yellow"
                            android:padding="@dimen/margin_15"
                            android:src="@drawable/ic_pdf" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="@dimen/margin_10"
                            android:background="@color/lightGray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_10"
                            android:padding="@dimen/margin_5"
                            android:text="@string/select_pdf"
                            android:textColor="@color/textColor"
                            android:textStyle="bold" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/tvSelectedPdf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/no_pdf_selected"
                    android:layout_marginTop="@dimen/margin_5"
                    android:textSize="@dimen/text_17" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_15">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPdfTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnUploadPdf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_15"
                    android:text="@string/upload_notice"
                    android:textAllCaps="false" />

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical" />
    </RelativeLayout>
</layout>